fixing ui style

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
     <!-- Manifest and apple icon -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" type="text/css" href="path/to/notifications.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
